# carla-node2-rev1

./: .gitignore
carlabridge-end/: CMakeLists.txt  PubSubFlow.drawio  readme.txt
carlabridge-end/include/: ImageSensorListener.hpp  adas_features.hpp  carlabridge.h  topics.hpp
carlabridge-end/libcarla-install/include/carla/: Version.h
carlabridge-end/libcarla-install/lib/: libboost_numpy38.so.1.72  libboost_python38.so.1.72  libpng16.la  libpng16.so.16
carlabridge-end/src/: ImageSensorListener.cpp  VehicleOdometryListener.cpp  carlabridge.cpp  node2.cpp
node2-end/: CMakeLists.txt  CarlaData.idl  readme.txt
node2-end/copy2build/: build.ninja  compile_commands.json
node2-end/include/: ImageSensorListener.hpp  RadarSensorListener.h  VehicleOdometryListener.h  adas_features.hpp  carlabridge.h  dds_node.hpp  dds_publisher.hpp  dds_subscriber.hpp  object_detection_yolo.hpp  ringbuffer.hpp
node2-end/libcarla-install/lib/: libboost_filesystem.so.1  libboost_program_options.so.1.72  libboost_system.so.1.72.0
node2-end/src/: ImageSensorListener.cpp  RadarSensorListener.cpp  carlabridge.cpp  node1.cpp  node2.cpp  object_detection_yolo.cpp
